feat(field）优化