@@ -34,7 +34,7 @@ public class JcxBuyPlanInsertReq extends JcxBuyPlanDto {
     } else {
       Map<Long, List<JcxBuyPlanItemDto>> goodsMap = this.getJcxBuyPlanItemDtoList().stream().collect(Collectors.groupingBy(JcxBuyPlanItemDto::getGoodsId));
       goodsMap.values().stream().filter(list -> list.size() > 1).forEach(list -> {
-        msgList.add("商品id:" + list.get(0).getGoodsName() + "不能重复");
+        msgList.add("商品id:" + list.getFirst().getGoodsName() + "不能重复");
       });
       this.getJcxBuyPlanItemDtoList().stream().filter(t -> StringUtils.isBlank(t.getGoodsName()) || Objects.isNull(t.getGoodsBuyCount()) || t.getGoodsBuyCount() < 1).forEach(t -> {
         msgList.add("商品id:" + t.getGoodsName() + "信息不正确");
